# wafdh

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/wafdh/: __main__.py  agents.py  cli.py  config.py  crawler.py  detector.py  http_client.py  llm.py  llm_codex.py  models.py  payloads.py  probes.py  reporting.py  signature_rules_core.py  signature_rules_extended.py  signature_types.py  signatures.py  verdicts.py
tests/: test_detector.py  test_llm_prompt.py  test_reporting.py  test_signatures.py  test_verdicts.py
